# cu_sawyer

cu_sawyer_bringup/: CMakeLists.txt  package.xml
cu_sawyer_bringup/config/: robot.rviz
cu_sawyer_bringup/data/: robot.urdf
cu_sawyer_bringup/launch/: rviz.launch  support.launch
cu_sawyer_bringup/scriptpanel/: blink-red.sh  cuify.sh  demo-interactive-cube-arrangement.sh  face-detection.sh  free-head.sh  gamepad-controller.sh  gripper-closed.sh  gripper-open.sh  head-camera.py  intera.sh  launch-support.sh  move-to-ready.sh  move-to-top-grasp.sh  move-to-zero.sh  robot-disable.sh  robot-enable.sh  scriptpanel.yaml  speech-prompt.sh  wrist-camera.py
cu_sawyer_env/: CMakeLists.txt  LICENSE  README.md  package.xml
cu_sawyer_env/env-hooks/: cu_sawyer_env.sh.em
cu_sawyer_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cu_sawyer_moveit_config/config/: fake_controllers.yaml  gazebo_sawyer.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sawyer.srdf  simple_moveit_controllers.yaml  stomp_planning.yaml
cu_sawyer_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
cu_sawyer_support/: CMakeLists.txt  package.xml
cu_sawyer_support/scripts/: add_colliders_in_planning_scene  gripper_commander
