<?xml version="1.0"?>
<package format="2">
  <name>cu_sawyer_bringup</name>
  <version>0.0.0</version>
  <description>The cu_sawyer_bringup package</description>

  <maintainer email="migoerner@constructor.university">Michael Goerner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
