<?xml version="1.0"?>
<package format="2">
  <name>cu_sawyer_support</name>
  <version>0.0.0</version>
  <description>The cu_sawyer_support package</description>

  <maintainer email="migoerner@constructor.university">Michael Goerner</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>intera_interface</depend>
  <depend>rospy</depend>
</package>
